[project]
name = "citation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.54.0",
    "crewai[tools]>=0.5.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "openai>=1.90.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.0",
]
